--- a/SmiteBuilder/wwwroot/css/site.css
+++ b/SmiteBuilder/wwwroot/css/site.css
@@ -33,3 +33,31 @@
         display: none;
     }
 }
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    box-shadow: 5px 5px 20px black;
+    border-radius: .2%;
+}
+
+    div.gallery:hover {
+        border: 1px solid #777;
+    }
+
+    div.gallery img {
+        /* padding: 10px; */
+        box-shadow: 0px 0px 0px 4px #222222;
+        margin: 10px;
+        border: #080808;
+        width: 70px;
+        border-width: 2px;
+        border-style: solid;
+        border-radius: 20%;
+    }
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
