HIde broken images.

--- a/SmiteBuilder/Views/Home/Index.cshtml
+++ b/SmiteBuilder/Views/Home/Index.cshtml
@@ -7,9 +7,11 @@
     @foreach (var item in Model)
     {
         
-        <img class="item-img" src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()">
+        <img class="item-img" id ="@item.ItemId.ToString()"src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()" onerror="hidden = true">
+        
         
     }
 </div>
+
 
 
