Intial gods page/model

--- a/SmiteBuilder/Views/Home/Index.cshtml
+++ b/SmiteBuilder/Views/Home/Index.cshtml
@@ -2,16 +2,9 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<h2>@ViewData["Title"]</h2>
+<h3>@ViewData["Message"]</h3>
 
-<div class="gallery">
-    @foreach (var item in Model)
-    {
-        
-        <img class="item-img" id ="@item.ItemId.ToString()"src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()" onerror="hidden = true">
-        
-        
-    }
-</div>
 
 
 
