--- a/SmiteBuilder/Views/Shared/_Layout.cshtml
+++ b/SmiteBuilder/Views/Shared/_Layout.cshtml
@@ -30,7 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <!--<li><a asp-area="" asp-controller="Home" asp-action="Manage">Manage</a></li>-->
+                    <li><a asp-area="" asp-controller="Home" asp-action="Items">Items</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Gods">Gods</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
