--- a/SmiteBuilder/Views/Home/Items.cshtml
+++ b/SmiteBuilder/Views/Home/Items.cshtml
@@ -6,8 +6,15 @@
 <h3>@ViewData["Message"]</h3>
 
 <div class="gallery">
+
     @foreach (var item in Model)
     {
             <img class="item-img" id="@item.ItemId.ToString()" src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()">
     }
 </div>
+<script>
+    $(document).ready(function () {
+        var x = document.getElementByClassName("item-img")
+
+    })
+</script>
