--- a/SmiteBuilder/wwwroot/css/site.css
+++ b/SmiteBuilder/wwwroot/css/site.css
@@ -10,36 +10,18 @@
     padding-right: 15px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
-}
-
-div.gallery {
+.gallery {
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
     box-shadow: 5px 5px 20px black;
     border-radius: .2%;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: justify;
+    -ms-text-justify: distribute-all-lines;
+    text-justify: distribute-all-lines;
+    min-width: 612px;
 }
 
     div.gallery:hover {
@@ -86,13 +68,10 @@ div.gallery.item-frame:hover {
     border-radius: 1%;
     object-position: top;
 }
-
-@media (max-width: 599px) {
-    .gallery .god-img {
-        width: 100%;
-        height: 8rem;
-        background-position: left -1rem;
-        background-size: 9.5rem;
-        background-repeat: no-repeat
-    }
+.gallery .img-box {
+    width: auto;
+    height: auto;
+    vertical-align: top;
+    display: inline-block;
+    zoom: 1;
 }
