--- a/SmiteBuilder/Views/Home/Gods.cshtml
+++ b/SmiteBuilder/Views/Home/Gods.cshtml
@@ -9,8 +9,9 @@
 <div class="gallery">
     @foreach (var god in Model)
     {
+        
         <div class="img-box">
-            <img class="god-img" id="@god.id.ToString()" src="@god.card.ToString()" alt="@god.name.ToString()">
+            <img class="god-img" id="@god.id.ToString()" src="@god.card.ToString()" alt="@god.name.ToString()" data-toggle="tooltip" data-placement="top" title="@god.name.ToString()">
         </div>
     }
 </div>
