--- a/SmiteBuilder/Views/Home/Items.cshtml
+++ b/SmiteBuilder/Views/Home/Items.cshtml
@@ -9,12 +9,8 @@
 
     @foreach (var item in Model)
     {
-            <img class="item-img" id="@item.ItemId.ToString()" src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()">
+        <div class="img-box">
+            <img class="item-img" id="@item.ItemId.ToString()" src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()" data-toggle="tooltip" data-placement="top" title="@item.DeviceName.ToString()">
+        </div>
     }
 </div>
-<script>
-    $(document).ready(function () {
-        var x = document.getElementByClassName("item-img")
-
-    })
-</script>
