--- a/SmiteBuilder/wwwroot/css/site.css
+++ b/SmiteBuilder/wwwroot/css/site.css
@@ -39,6 +39,11 @@
         border-radius: 20%;
     }
 
+    div.gallery img:focus {
+        outline: none;
+        border-color: darkgoldenrod;
+    }
+
 div.desc {
     padding: 15px;
     text-align: center;
