Added ugly name boxes for items

--- a/SmiteBuilder/Views/Home/Items.cshtml
+++ b/SmiteBuilder/Views/Home/Items.cshtml
@@ -10,9 +10,10 @@
 
     @foreach (var item in Model)
     {
-        <div class="img-box">
-            <img tabindex="0" class="item-img" id="@item.ItemId.ToString()" src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="@item.DeviceName" data-content="@item.ItemDescription.Description">
-        </div>
+    <div class="img-box">
+        <img tabindex="0" class="item-img" id="@item.ItemId.ToString()" src="@item.itemIcon_URL.ToString()" alt="@item.DeviceName.ToString()" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="@item.DeviceName" data-content="@item.ItemDescription.Description">
+        <div class="centered">@item.DeviceName</div>
+    </div>
     }
 </div>
 
