--- a/SmiteBuilder/wwwroot/css/site.css
+++ b/SmiteBuilder/wwwroot/css/site.css
@@ -33,7 +33,7 @@
         box-shadow: 0px 0px 0px 4px #222222;
         margin: 10px;
         border: #080808;
-        width: 70px;
+        width: 96px;
         border-width: 2px;
         border-style: solid;
         border-radius: 20%;
@@ -79,4 +79,11 @@ div.gallery.item-frame:hover {
     vertical-align: top;
     display: inline-block;
     zoom: 1;
+}
+.gallery .img-box .centered {
+    text-align: center;
+    background-color: #000000;
+    color: white;
+    border-radius: 62%;
+    border-top: 50px;
 }
