--- a/SmiteBuilder/wwwroot/css/site.css
+++ b/SmiteBuilder/wwwroot/css/site.css
@@ -24,19 +24,17 @@
     min-width: 612px;
 }
 
+div.gallery-container {
+    border: 1px solid #ccc;
+}
+
     div.gallery:hover {
         border: 1px solid #777;
     }
 
     div.gallery img {
-        /* padding: 10px; */
-        box-shadow: 0px 0px 0px 4px #222222;
-        margin: 10px;
-        border: #080808;
-        width: 96px;
-        border-width: 2px;
-        border-style: solid;
-        border-radius: 20%;
+        width: 100%;
+        height: auto;
     }
 
     div.gallery img:focus {
@@ -47,14 +45,20 @@
 div.desc {
     padding: 15px;
     text-align: center;
+    min-height: 96px;
 }
 
-div.gallery.div.item-frame {
-    width: 70px;
-    height: 70px;
-    background: #222222;
-    transition: height 2s;
-    -webkit-transition: height 2s;
+.gallery .item-img {
+    border: .2rem solid #222;
+    box-shadow: -3px 1px 15px 0px #000;
+    cursor: pointer;
+    height: 18.4rem;
+    -o-object-fit: cover;
+    overflow: hidden;
+    width: 18rem;
+    object-fit: cover;
+    border-radius: 1%;
+    object-position: top;
 }
 
 div.gallery.item-frame:hover {
@@ -87,3 +91,20 @@ div.gallery.item-frame:hover {
     border-radius: 62%;
     border-top: 50px;
 }
+/*.container-fluid {
+    border: 1px solid #ccc;
+    float: left;
+    text-align: justify;
+    box-shadow: 5px 5px 20px black;
+}
+div.gallery {
+    margin: 9px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 9%;
+    border-radius: 28%;
+    min-width: 128px;
+    vertical-align: top;
+    display: inline-block;
+    zoom: 1;
+}*/
